tests/paczka1/small_fuzzy/88184822.err
Error in line 1: S380 S485 46,5
Error in line 6: 9AZzxJfX0 A894 31,9
Error in line 8: WWLDv9rNe A613 39,2
